--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
       >
       <ul class="menu">
         <li><a class="agency" href="./Agency">Agencja</a></li>
-        <li><a class="portfolio" href="./portfolio.html">Portfolio</a></li>
+        <li><a class="portfolio active-link" href="./portfolio.html">Portfolio</a></li>
         <li><a class="contact" href="./Contact">Kontakt</a></li>
       </ul>
       <ul class="second-menu">
@@ -56,19 +56,19 @@
           <ul class="fifth-list-style">
             <li>
               <figure class="portfoliobox">
-                <p class="portfolio-overlay">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji<img
+                <img
                   src="images/portfoliofirst.jpg"
                   alt="Strona internetowa
               Technocrack"
                   width="370px"
                   height="294px"
-                /></p>
+                />
                 <figcaption class="boxname">
                   Technocrack
                   <p class="category">Strona internetowa</p>
                 </figcaption>
               </figure>
-            </li></div>
+            </li>
             <li>
               <figure class="portfoliobox">
                 <img
