--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       <section class="section background-prologue">
         <div class="containerdiv">
           <h1 class="title">EFEKTYWNE ROZWIĄZANIA <p>DLA WASZEGO BIZNESU</p></h1>
-          <div><button class="text">Zamów usługę</button></div>
+          <div><button class="text" type="button" data-modal-open>Zamów usługę</button>
+         
         </div>
       </section>
 
@@ -278,5 +279,11 @@
               <svg class="social" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-linkedin" ></use></svg></li>
             </div>
     </footer></section>
+    <div class="backdrop is-hidden" data-modal>
+<div class="modal">
+  <button type="button" class="modal-btn" data-modal-close>X</button>
+</div>
+    </div>
+    <script src="./css/js/modal.js"></script>
   </body>
 </html>
