--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,11 @@
                   width="370px"
                   height="294px"
                 />
+                <div class="portfolio-overlay">
+                  <p class="portfolio-overlay-text">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div>
                 <figcaption class="boxname">
                   Technocrack
                   <p class="category">Strona internetowa</p>
