--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <span class="web-studio-logo-studio">Studio</span></a
       >
       <ul class="menu">
-        <li><a class="agency" href="./Agency">Agencja</a></li>
+        <li><a class="agency" href="./index.html">Agencja</a></li>
         <li><a class="portfolio active-link" href="./portfolio.html">Portfolio</a></li>
         <li><a class="contact" href="./Contact">Kontakt</a></li>
       </ul>
@@ -56,7 +56,7 @@
           <ul class="fifth-list-style">
             <li>
               <figure class="portfoliobox">
-                <img
+                <div class="box"><img
                   src="images/portfoliofirst.jpg"
                   alt="Strona internetowa
               Technocrack"
@@ -67,7 +67,7 @@
                   <p class="portfolio-overlay-text">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
                   </p>
-                </div>
+                </div></div>
                 <figcaption class="boxname">
                   Technocrack
                   <p class="category">Strona internetowa</p>
