--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
               <span class="web-studio-logo-studio">Studio</span></a
             >
         <ul class="menu">
-          <li><a class="agency active-link" href="https://www.google.pl">Agencja</a></li>
+          <li><a class="agency active-link" href="./index.html">Agencja</a></li>
           <li><a class="portfolio" href="./portfolio.html">Portfolio</a>
           </li>
-          <li><a class="contact" href=".https://www.yahoo.com">Kontakt</a></li>
+          <li><a class="contact" href="./Contact">Kontakt</a></li>
         </ul>
       <ul class="second-menu">
         <li class="email second-menu-icons">
