--- a/portfolio.html
+++ b/portfolio.html
@@ -76,6 +76,7 @@
             </li>
             <li>
               <figure class="portfoliobox">
+                <div class="box">
                 <img
                   src="images/portfoliosecond.jpg"
                   alt="Grafika New Orlean vs
@@ -83,6 +84,11 @@
                   width="370px"
                   height="294px"
                 />
+                <div class="portfolio-overlay">
+                  <p class="portfolio-overlay-text">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div></div>
                 <figcaption class="boxname">
                   Grafika New Orlean vs Golden Star
                   <p class="category">Dizajn</p>
@@ -91,12 +97,17 @@
             </li>
             <li>
               <figure class="portfoliobox">
+                <div class="box">
                 <img
                   src="images/portfoliothird.jpg"
                   alt="Restauracja Seafood"
                   width="370px"
                   height="294px"
-                />
+                /><div class="portfolio-overlay">
+                  <p class="portfolio-overlay-text">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div></div>
                 <figcaption class="boxname">
                   Restauracja Seafood
                   <p class="category">Aplikacja</p>
@@ -106,12 +117,17 @@
 
             <li>
               <figure class="portfoliobox">
+                <div class="box">
                 <img
                   src="images/portfoliofourth.jpg"
                   alt="Projekt Prime"
                   width="370px"
                   height="294px"
-                />
+                /><div class="portfolio-overlay">
+                  <p class="portfolio-overlay-text">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div></div>
                 <figcaption class="boxname">
                   Projekt Prime
                   <p class="category">Marketing</p>
@@ -120,12 +136,17 @@
             </li>
             <li>
               <figure class="portfoliobox">
+                <div class="box">
                 <img
                   src="images/portfoliofifth.jpg"
                   alt="Projekt Boxes"
                   width="370px"
                   height="294px"
-                />
+                /><div class="portfolio-overlay">
+                  <p class="portfolio-overlay-text">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div></div>
                 <figcaption class="boxname">
                   Projekt Boxes
                   <p class="category">Aplikacja</p>
@@ -134,13 +155,18 @@
             </li>
             <li>
               <figure class="portfoliobox">
+                <div class="box">
                 <img
                   src="images/portfoliosixth.jpg"
                   alt="Inspiration has no
               Borders"
                   width="370px"
                   height="294px"
-                />
+                /><div class="portfolio-overlay">
+                  <p class="portfolio-overlay-text">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div></div>
                 <figcaption class="boxname">
                   Inspiration has no Borders
                   <p class="category">Strona internetowa</p>
@@ -149,13 +175,18 @@
             </li>
             <li>
               <figure class="portfoliobox">
+                <div class="box">
                 <img
                   src="images/portfolioseventh.jpg"
                   alt="Magazyn Limited
               Edition"
                   width="370px"
                   height="294px"
-                />
+                /><div class="portfolio-overlay">
+                  <p class="portfolio-overlay-text">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div></div>
                 <figcaption class="boxname">
                   Magazyn Limited Edition
                   <p class="category">Dizajn</p>
@@ -164,12 +195,17 @@
             </li>
             <li>
               <figure class="portfoliobox">
+                <div class="box">
                 <img
                   src="images/portfolioeightth.jpg"
                   alt="Projekt LAB"
                   width="370px"
                   height="294px"
-                />
+                /><div class="portfolio-overlay">
+                  <p class="portfolio-overlay-text">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div></div>
                 <figcaption class="boxname">
                   Projekt LAB
                   <p class="category">Marketing</p>
@@ -178,12 +214,17 @@
             </li>
             <li>
               <figure class="portfoliobox">
+                <div class="box">
                 <img
                   src="images/portoflionineth.jpg"
                   alt="Growing Business"
                   width="370px"
                   height="294px"
-                />
+                /><div class="portfolio-overlay">
+                  <p class="portfolio-overlay-text">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div></div>
                 <figcaption class="boxname">
                   Growing Business
                   <p class="category">Aplikacja</p>
