--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <p class="jobstatus">Product Designer</p>
                 <div>
                   <p class="social-links">
-                    <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-instagram" width="44px" height="44px"></use></svg>
+                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-instagram" width="44px" height="44px"></use></svg>
                   <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-twitter" width="44px" height="44px"></use></svg>
                   <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-facebook" width="44px" height="44px"></use></svg>
                   <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-linkedin" width="44px" height="44px"></use></svg>
@@ -263,7 +263,7 @@
       </address>
     </div>
     <div class="social-items">
-      <h2 class="social">DOŁĄCZ DO NAS</h2>
+      <h2 class="social-title">DOŁĄCZ DO NAS</h2>
       <ul class="li-class">
         <li>
           <svg class="social"width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-instagram"></use></svg>
