--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
                 <p class="jobstatus">Product Designer</p>
                 <div>
                   <p class="social-links">
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-instagram" width="44px" height="44px"></use></svg>
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-twitter" width="44px" height="44px"></use></svg>
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-facebook" width="44px" height="44px"></use></svg>
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-linkedin" width="44px" height="44px"></use></svg>
+                  <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-instagram"></use></svg>
+                  <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-twitter" ></use></svg>
+                  <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-facebook" ></use></svg>
+                  <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-linkedin" ></use></svg>
                 </p></div>
               </figcaption>
             </figure>
@@ -172,10 +172,10 @@
                 <p class="jobstatus">Frontend Developer</p>
                 <div>
                   <p class="social-links">
-                    <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-instagram" width="44px" height="44px"></use></svg>
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-twitter" width="44px" height="44px"></use></svg>
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-facebook" width="44px" height="44px"></use></svg>
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-linkedin" width="44px" height="44px"></use></svg>
+                    <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-instagram"></use></svg>
+                  <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-twitter" ></use></svg>
+                  <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-facebook" ></use></svg>
+                  <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-linkedin" ></use></svg>
                   </p></div>
               </figcaption>
             </figure>
@@ -193,11 +193,10 @@
                 John Doe
                 <p class="jobstatus">Marketing</p>
                 <div>
-                  <p class="social-links"><svg class="social-links-icons">
-                    <use href="./images/SVG/icons.svg#icon-instagram" width="44px" height="44px"></use></svg>
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-twitter" width="44px" height="44px"></use></svg>
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-facebook" width="44px" height="44px"></use></svg>
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-linkedin" width="44px" height="44px"></use></svg>
+                  <p class="social-links"><svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-instagram"></use></svg>
+                    <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-twitter" ></use></svg>
+                    <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-facebook" ></use></svg>
+                    <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-linkedin" ></use></svg>
                 </p></div>
               </figcaption>
             </figure>
@@ -216,10 +215,10 @@
                 <p class="jobstatus">UI Designer</p>
                 <div>
                   <p class="social-links">
-                    <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-instagram" width="44px" height="44px"></use></svg>
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-twitter" width="44px" height="44px"></use></svg>
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-facebook" width="44px" height="44px"></use></svg>
-                  <svg class="social-links-icons"><use href="./images/SVG/icons.svg#icon-linkedin" width="44px" height="44px"></use></svg>
+                    <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-instagram"></use></svg>
+                  <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-twitter" ></use></svg>
+                  <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-facebook" ></use></svg>
+                  <svg class="social-links-icons" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-linkedin" ></use></svg>
                 </p></div>
               </figcaption>
             </figure>
