--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
 </li></figcaption>
         </ul>
       </div></section>
-    </main><footer class="first-background footer section">
+    </main><footer class="first-background footer">
+      <div class="blockcontainer">
     <div class="footer-container">
       <h5 class="logo-footer"><span style="color: #2196f3">Web</span>Studio</h5>
       <address class="address">
@@ -273,7 +274,7 @@
             <svg class="social" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-facebook" ></use></svg></li>
             <li>
               <svg class="social" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-linkedin" ></use></svg></li>
-            </div>
+            </div></div>
     </footer></section>
     <div class="backdrop is-hidden" data-modal>
 <div class="modal">
