--- a/portfolio.html
+++ b/portfolio.html
@@ -233,7 +233,8 @@
         </div>
       </section>
     </main>
-    <footer class="first-background footer section">
+    <footer class="first-background footer">
+      <div class="blockcontainer">
       <div class="footer-container">
         <h5 class="logo-footer"><span style="color: #2196f3">Web</span>Studio</h5>
         <address class="address">
@@ -259,7 +260,7 @@
                 <svg class="social" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-facebook" ></use></svg></li>
                 <li>
                   <svg class="social" width="44px" height="44px"><use href="./images/SVG/icons.svg#icon-linkedin" ></use></svg></li>
-              </div>
+              </div></div>
       </footer></section>
         
     </footer>
