--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./normalizer.css"/>
+    <link rel="stylesheet " href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
